# quicklime

./: README.md  package.json  svelte.config.js  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  command.rs  lib.rs  llm.rs  main.rs  setup.rs  utils.rs
src/routes/config/: +page.svelte
src/routes/main/: +page.svelte
