[package]
name = "quicklime"
version = "0.1.0"
description = "A Tauri App"
authors = ["GossiperLoturot <ts20030211@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quicklime_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
jsonpath-rust = "0.7"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = { version = "2", features = ["json"] }
tokio = { version = "1", features = ["time"] }
windows = "0.60"
